    scrolling)
- slider enhancement to add the possibility to show its value
- extension added to support openHAB (http://code.google.com/p/openhab/) as backend
- Added class parameter for additional styling
- lots of little bugfixes and improvements
- Editor: old WYSIWYG-editor was removed due to existing and forseeable compatibility issues
<Changes up to Revision 1243 included>


0.6.2
=====

This is a bug fix release to address bug 3465482 
("Format string: wrong result for negative numbers above -1")

0.6.1
=====

The identically to release 0.6.0
This additional release is due to technical reasons.

0.6.0
=====

The public beta release!
(Basically the same as the 0.6.0-RC5)

0.6.0-RC5
=========

- Last minute bug fix: in relative mode the infotrigger is using the variant
  types "button" and "display" now
- Last minute bug fix: change diagram to new syntax that uses explicit "label"
  element
- Layout fix: make help button in editor look the same

0.6.0-RC4
=========

- Bug Fix: bing XSD up to date

0.6.0-RC3
=========

- Fix rendering problem in discreet_slim
- Fix Bug #3175343
- Fix Bug in infotrigger (min/max clipping)
- Compatability improvement for iPad
- Improvements to default config and widget demo config
- Fix Bug when value in styling didn't exist
- New Feature: add link to show help (SF Wiki) in the editor
- Add encode function for DPT16 (= 14 byte text)
- Fix Bug: avoid overflow in infotrigger
- Fix Bug in video element: remove "refresh" and add the more 
  sensible "autoplay"
- New Feature: Add favicon - edit in red, svn in black and release in sodium

0.6.0-RC2
=========

- New Feature: Show version in status bar
- New Feature: toogle-widget (switch toggling multiple values based on mapping)
- New Feature: jqclock - a clock widget with statusbar-support
- infotrigger widget:
  - Show infoposition and format attribute in the editor
  - New Feature: also send absolute value change