@@ -28,7 +28,7 @@
     <script src="structure/pure/break.js" type="text/javascript"></script>
     <script src="structure/pure/group.js" type="text/javascript"></script>
     <script src="structure/pure/rgb.js" type="text/javascript"></script>
-    <script src="structure/pure/iframe.js" type="text/javascript"></script>
+    <script src="structure/pure/web.js" type="text/javascript"></script>
     <script src="structure/pure/image.js" type="text/javascript"></script>
     <script src="structure/pure/imagetrigger.js" type="text/javascript"></script>
     <script src="structure/pure/include.js" type="text/javascript"></script>
